examples/publisher/secrets.yaml
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: dataphos
