examples/publisher/postgres_deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: publisher-source
---

apiVersion: v1
kind: Service
metadata:
  name: publisher-postgres-source
  namespace: publisher-source
spec:
  selector:
    app: publisher-postgres-source-db
  ports:
    - port: 5432
  type: LoadBalancer
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: publisher-postgres-source-db
  namespace: publisher-source
spec:
  serviceName: publisher-postgres-source
  replicas: 1
  selector:
    matchLabels:
      app: publisher-postgres-source-db
  template:
    metadata:
      labels:
        app: publisher-postgres-source-db
    spec:
      containers:
        - name: publisher-postgres-source
          image: syntioinc/dataphos-publisher-source-example:1.0.0
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: publisher-postgres-source-data-volume
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: publisher-postgres-source-data-volume
        namespace: publisher-source
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 500M
