examples/publisher/publisher_gcp.yaml
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: dataphos
---

apiVersion: v1
kind: Service
metadata:
  name: publisher-postgres
  namespace: dataphos
spec:
  selector:
    app: publisher-postgres-db
  ports:
    - port: 5432
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: publisher-postgres-db
  namespace: dataphos
spec:
  serviceName: publisher-postgres
  replicas: 1
  selector:
    matchLabels:
      app: publisher-postgres-db
  template:
    metadata:
      labels:
        app: publisher-postgres-db
    spec:
      containers:
        - name: publisher-postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: publisher-postgres-volume
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: publisher-postgres-volume
        namespace: dataphos
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 20Gi
---


# Avro Schema Generator
apiVersion: v1
kind: Service
metadata:
  name: publisher-avro-schema-generator
  namespace: dataphos
spec:
  selector:
    app: server
    component: avro-schema-generator
  ports:
    - protocol: TCP
      port: 8080
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: publisher-avro-schema-generator
  namespace: dataphos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
      component: avro-schema-generator
  template:
    metadata:
      labels:
        app: server
        component: avro-schema-generator
      annotations:
        syntio.net/logme: "true"
    spec:
      containers:
        - name: avro-schema-generator
          image: syntioinc/dataphos-publisher-avro-schema-generator:1.0.0
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 50m
              memory: 250Mi
---

apiVersion: v1
kind: Service
metadata:
  name: publisher-manager
  namespace: dataphos
spec:
  selector:
    app: server
    component: manager
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: publisher-manager
  namespace: dataphos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
      component: manager
  template:
    metadata:
      labels:
        app: server
        component: manager
      annotations:
        syntio.net/logme: "true"
    spec:
      containers:
        - name: manager
          image: syntioinc/dataphos-publisher-manager:1.0.0
          resources:
            limits:
              cpu: 100m
            requests:
              cpu: 5m
              memory: 45Mi
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: publisher-data-fetcher
  namespace: dataphos
spec:
  selector:
    app: server
    component: data-fetcher
  ports:
    - protocol: TCP
      port: 8081
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: publisher-data-fetcher
  namespace: dataphos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
      component: data-fetcher
  template:
    metadata:
      labels:
        app: server
        component: data-fetcher
      annotations:
        syntio.net/logme: "true"
    spec:
      containers:
        - name: data-fetcher
          image: syntioinc/dataphos-publisher-data-fetcher:1.0.0
          resources:
            limits:
              cpu: 600m
            requests:
              cpu: 200m
              memory: 160Mi
          ports:
            - containerPort: 8081
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: publisher-scheduler
  namespace: dataphos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
      component: scheduler
  template:
    metadata:
      labels:
        app: server
        component: scheduler
      annotations:
        syntio.net/logme: "true"
    spec:
      serviceAccountName: publisher-sa
      containers:
        - name: scheduler
          image: syntioinc/dataphos-publisher-scheduler:1.0.0
          resources:
            limits:
              cpu: 100m
            requests:
              cpu: 5m
              memory: 30Mi
---

apiVersion: v1
kind: Service
metadata:
  name: publisher-webui
  namespace: dataphos
spec:
  selector:
    app: webui
    component: webui
  ports:
    - port: 8080
  type: NodePort
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: publisher-webui-ingress
  namespace: dataphos
  annotations:
    kubernetes.io/ingress.global-static-ip-name: <webui-static-IP-name> # insert the name of your static IP address for Web UI ingress
    ingress.gcp.kubernetes.io/pre-shared-cert: <webui-certificate-name> # insert the name of your Google managed certificate
spec:
  rules:
    - host: <webui-domain-name> # insert your webui domain name, same as in the Manager config map
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: publisher-webui
                port:
                  number: 8080
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: publisher-webui
  namespace: dataphos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webui
      component: webui
  template:
    metadata:
      labels:
        app: webui
        component: webui
    spec:
      containers:
        - name: manager
          image: syntioinc/dataphos-publisher-webui:1.0.0
          resources:
            limits:
              cpu: 100m
            requests:
              cpu: 5m
              memory: 30Mi
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: publisher-webui-config-volume
              mountPath: /usr/share/nginx/html/config.js
              subPath: config.js
      volumes:
        - name: publisher-webui-config-volume
          configMap:
            name: publisher-webui-config
            items:
              - key: server.properties
                path: config.js
